--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Planets</title>
   <link href="css/main.css" rel="stylesheet">
   <link href='http://fonts.googleapis.com/css?family=Bevan' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Bevan|Open+Sans:300' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
