--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 	<h2>Introduction</h2>
 
-		<p>A planet is a <em>celestial</em> body, orbiting a star, that is massive enough to be gravitationally <em>rounded</em> and has <q>cleared the neighbourhood</q> around its orbit.</p>
+		<p>A planet is a <b>celestial</b> body, orbiting a star, that is massive enough to be gravitationally <b>rounded</b> and has <q>cleared the neighbourhood</q> around its orbit.</p>
 
 		<blockquote>
 		<p>“I think of space not as the final frontier but as the next frontier.”</p>
