Changed quote to italics

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<p>A planet is a <b>celestial</b> body, orbiting a star, that is massive enough to be gravitationally <b>rounded</b> and has <q>cleared the neighbourhood</q> around its orbit.</p>
 
 		<blockquote>
-		<p>“I think of space not as the final frontier but as the next frontier.”</p>
+		<p><em>“I think of space not as the final frontier but as the next frontier.”<em></p>
 		<footer>— <cite>Neil Degrasse Tyson</cite></footer>
 		</blockquote>
 
