--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<p>A planet is a <b>celestial</b> body, orbiting a star, that is massive enough to be gravitationally <b>rounded</b> and has <q>cleared the neighbourhood</q> around its orbit.</p>
 
 		<blockquote>
-		<p><em>“I think of space not as the final frontier but as the next frontier.”<em></p>
+		<p><em>“I think of space not as the final frontier but as the next frontier.”</em></p>
 		<footer>— <cite>Neil Degrasse Tyson</cite></footer>
 		</blockquote>
 
@@ -41,7 +41,7 @@
 			<li>Mars</li>
 		</ol>
 
-	<h3>Mars</h3>
+	<h2>Mars</h2>
 
 		<p>Mars is named after the Roman god of war, it is often described as the <q>Red Planet</q> because the iron oxide prevalent on its surface gives it a reddish appearance.</p>
 
@@ -61,7 +61,7 @@
 			<dd>3389.5 km</dd>
 		</dl>
 
-	<h3>Venus</h3>
+	<h2>Venus</h2>
 
 		<p>Venus is the second planet from the Sun, orbiting it every 224.7 Earth days.</p>
 
