Changed 'Terrestrial Planets' to lower-roman

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
 
 		<blockquote>
 		<p><em>“I think of space not as the final frontier but as the next frontier.”</em></p>
-		<footer>— <cite>Neil Degrasse Tyson</cite></footer>
 		</blockquote>
+		<footer class="cite"><cite>Neil Degrasse Tyson</cite></footer>
 
 <p><em>Unfortunately</em>, Pluto is no longer a planet but a dwarf planet. Sometimes I think, <em>Pluto still deserves full planet hood.</em></p>
 
 	<h2>Terrestrial planets</h2>
 
-		<ol>
+		<ol class="planetlist">
 			<li>Mercury</li>
 			<li>Venus</li>
 			<li>Earth</li>
