--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Planets</title>
   <link href="css/main.css" rel="stylesheet">
   <link href='http://fonts.googleapis.com/css?family=Bevan' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Bevan|Open+Sans:300' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Bevan' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
@@ -87,4 +87,4 @@
 					<li><a href="https://en.wikipedia.org/wiki/Mars">https://en.wikipedia.org/wiki/Mars</a></li>
 					<li><a href="https://en.wikipedia.org/wiki/Venus">https://en.wikipedia.org/wiki/Venus</a></li>
 					</ol>
-			<footer>
+			</footer>
